fix: add fallback channels for nano banana

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,5 +8,9 @@
 # NANO_BANANA_REFINEMENT_MODEL=gemini-2.5-flash-image-preview
 # NANO_BANANA_GENERATION_MODEL=nano-banana-fast
 
+# Optional fallback models that will be attempted if the primary channel is unavailable.
+# NANO_BANANA_REFINEMENT_FALLBACK_MODEL=gemini-2.5-flash-image
+# NANO_BANANA_GENERATION_FALLBACK_MODEL=gemini-2.5-flash-image
+
 # Port for the Express server (default: 4000)
 # PORT=4000
